# fcitx5-ios

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  README.md  README.zh-CN.md  install-deps.sh
.github/workflows/: ci.yml  compare.yml
assets/: CMakeLists.txt  keyboard.entitlements
assets/SwiftTranslations/Chinese/en.lproj/: InfoPlist.strings
assets/SwiftTranslations/Chinese/zh-Hans.lproj/: InfoPlist.strings
assets/SwiftTranslations/Hallelujah/en.lproj/: InfoPlist.strings
assets/SwiftTranslations/Hallelujah/zh-Hans.lproj/: InfoPlist.strings
assets/SwiftTranslations/Keyboard/zh-Hans.lproj/: Localizable.strings
assets/SwiftTranslations/Main/zh-Hans.lproj/: InfoPlist.strings  Localizable.strings
assets/SwiftTranslations/Mozc/en.lproj/: InfoPlist.strings
assets/SwiftTranslations/Rime/en.lproj/: InfoPlist.strings
assets/SwiftTranslations/Rime/zh-Hans.lproj/: InfoPlist.strings
assets/en.lproj/: InfoPlist.strings
assets/zh-Hans.lproj/: Localizable.strings
cache/: README.md
cmake/: AddSwift.cmake  Fcitx5UtilsConfig.cmake  Fcitx5UtilsConfigVersion.cmake  FindFcitx5Core.cmake  FindFcitx5Module.cmake  FindFcitx5Utils.cmake  FindLibIMEPinyin.cmake  FindLibIMETable.cmake  FindOpenCC.cmake  InitializeSwift.cmake  MacOSXBundleInfo.plist.in  ios.cmake
cmake/Fcitx5Utils/: Fcitx5CompilerSettings.cmake  Fcitx5Download.cmake.in  Fcitx5Macros.cmake  Fcitx5ModuleTemplate.cmake.in
common/: CMakeLists.txt  common-public.h  common.cpp  common.h  inputmethod.cpp  locale.swift  logging.swift  module.modulemap  util.h  util.swift
docs/: full-access.md  simulator.md  size.md
engines/: CMakeLists.txt
include/Fcitx5/Utils/fcitx-utils/: macros.h
include/fcitx-module/clipboard/: clipboard_public.h
iosfrontend/: CMakeLists.txt  iosfrontend.conf.in.in  iosfrontend.cpp  iosfrontend.h  iosfrontend.swift
iosnotifications/: CMakeLists.txt  iosnotifications.cpp  iosnotifications.h  notifications.conf.in.in  notify.swift  toast.swift
ipc/: CMakeLists.txt  ipc.swift
keyboard/: CMakeLists.txt  Info.plist  Info.plist.in  KeyboardViewController.swift  SyncConfig.swift  fcitx.cpp  fcitx.h  keycode.cpp  keycode.h  nativestreambuf.h  util.h  util.swift
patches/: chinese-addons.patch  fcitx5.patch  hallelujah.patch  kenlm.patch  libime.patch  rime.patch  swifter.patch
protocol/: CMakeLists.txt  FcitxProtocol.swift
scripts/: check-validity.sh  code-sign.sh  configure.py  format.sh  generate-icons.sh  hallelujah.py  install-deps.sh  install.sh  lint.sh
src/: AboutView.swift  AddonConfigView.swift  App.swift  AppDelegate.swift  CMakeLists.txt  ConfigView.swift  ContentView.swift  InputMethodsView.swift  SceneDelegate.swift  SyncConfigView.swift  config.cpp  fcitx.cpp  fcitx.h  util.swift
src/Settings.bundle/: Root.plist
src/Settings.bundle/en.lproj/: Root.strings
src/Settings.bundle/zh-Hans.lproj/: Root.strings
src/config/: BooleanView.swift  EntryView.swift  EnumView.swift  ExternalView.swift  GroupView.swift  IntegerView.swift  ListView.swift  StringView.swift  UnknownView.swift  manager.swift  option.swift
uipanel/: Bubble.swift  CMakeLists.txt  Candidate.swift  CandidateBar.swift  Color.swift  ContextMenu.swift  Edit.swift  FrameChange.swift  Key.swift  KeyAction.swift  KeyModifier.swift  Keyboard.swift  ReturnBar.swift  Shadow.swift  StatusArea.swift  Symbol.swift  Sync.swift  Toolbar.swift  VirtualKeyboard.swift  WrapLayout.swift  height.swift  keyboardui.swift  module.modulemap  ui.swift  uipanel-public.h  uipanel.conf.in.in  uipanel.cpp  uipanel.h
